# spotty

./: .gitignore  .project  Cargo.toml  README.md  build.rs
docker/: Dockerfile  README.md  docker-build.sh
src/: lms.rs  main.rs
t/: test.t
