[package]
name = "spotty"
version = "0.35.0"
authors = ["Michael Herger <michael@herger.net>"]

[[bin]]
name = "spotty"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = "0.6"
hyper = "0.11"
rust-crypto = "0.2.36"
futures = "0.1"
getopts = "0.2"
log = "0.4"
rpassword = "3.0"
serde_json = "0.9.5"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"

[dependencies.librespot]
git = "https://github.com/michaelherger/librespot.git"
rev = "8c2bd4e0e2323ee1f835d28a6aa9ede700e7497c"
#path = "../librespot"
default-features = false
# enable the following for macOS <= 10.9 compatibility
#features = ["with-tremor","with-lewton"]

[replace]
"rust-crypto:0.2.36" = { git = "https://github.com/awmath/rust-crypto.git", branch = "avx2" }

[profile.release]
lto = true
panic = 'abort'
