[package]
name = "spotty"
version = "0.35.9"
authors = ["Michael Herger <michael@herger.net>"]
edition = "2018"

[[bin]]
name = "spotty"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = "0.6"
hyper = "0.11"
futures = "0.1"
getopts = "0.2"
log = "0.4"
rpassword = "3.0"
serde_json = "0.9.5"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
sha-1 = "0.7.0"
hex = "0.3.2"

[dependencies.librespot]
git = "https://github.com/michaelherger/librespot.git"
rev = "08a5f677d87696b9079c5a7bb880753a0283c07f"
#path = "../librespot"
default-features = false
# enable the following for macOS <= 10.9 compatibility
#features = ["with-tremor","with-lewton"]

[profile.release]
lto = true
panic = 'abort'
